feat: fazendo as etapas de autenticacao, jwt, middleware e auth
