# backend/src/routes/authRoutes.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { AuthController } from '../controllers/AuthController.js';
+
+const router = Router();
+
+router.post('/login', AuthController.login);
+
+export { router as authRoutes };
