# backend/src/routes/index.ts
@@ -1,9 +1,12 @@
 import { Router } from 'express';
-import { AgendamentoRoutes } from './agendamentoRoutes';
+import { AgendamentoRoutes } from './agendamentoRoutes.js';
+import { authRoutes } from './authRoutes.js';
+import { userRoutes } from './userRoutes.js'; 
 
 const router = Router();
 
-// Registra as rotas de agendamentos sob o prefixo /agendamentos
 router.use('/agendamentos', AgendamentoRoutes);
+router.use('/auth', authRoutes); 
+router.use('/users', userRoutes);
 
 export { router as appRoutes };
